--- a/src/docs/asciidoc/accommodation/accommodation-api.adoc
+++ b/src/docs/asciidoc/accommodation/accommodation-api.adoc
@@ -23,3 +23,17 @@ include::{snippets}/accommodation-controller-docs-test/register-accommodation/re
 
 include::{snippets}/accommodation-controller-docs-test/register-accommodation/http-response.adoc[]
 include::{snippets}/accommodation-controller-docs-test/register-accommodation/response-fields.adoc[]
+
+[[Get-Accommodation-Ownership]]
+== 보유 숙소 목록 조회
+
+보유 숙소 목록 조회 API 입니다.
+
+=== HttpRequest
+
+include::{snippets}/accommodation-controller-docs-test/get-accommodation-names/http-request.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/accommodation-controller-docs-test/get-accommodation-names/http-response.adoc[]
+include::{snippets}/accommodation-controller-docs-test/get-accommodation-names/response-fields.adoc[]
