docs: 에러 코드 추가 사항 적용

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -44,24 +44,38 @@
 | `401 Unauthorized` | 1002 | 해당 회원이 이미 로그아웃한 경우 발생
 | `400 Bad Request` | 1003 | 로그인 시 이메일이 틀린 경우 발생
 | `400 Bad Request` | 1004 | 로그인 시 비밀번호가 틀린 경우 발생
-| `404 NotFound` | 1005 | 회원 정보를 찾을 수 없는 경우 발생
-| `404 NotFound` | 2000 | 숙소 정보를 찾을 수 없는 경우 발생
-| `400 Bad Request` | 2001 | 예약 불가능한 객실인 경우 발생
-| `400 Bad Request` | 2002 | 알맞지 않은 숙소 종류일 경우 발생
-| `400 Bad Request` | 2003 | 알맞지 않은 카테고리일 경우 발생
-| `404 NotFound` | 3000 | 객실 정보를 찾을 수 없는 경우 발생
+| `404 Not Found` | 1005 | 회원 정보를 찾을 수 없는 경우 발생
+| `404 NotFound` | 1006 | 인증 정보를 찾을 수 없는 경우 발생
+| `500 Internal Server Error` | 1007 | 이메일 인증코드 생성 중 오류가 발생한 경우 발생
+| `400 Bad Request` | 1008 | 존재하지 않는 이메일인 경우 발생
+| `400 Bad Request` | 1009 | 이메일 인증코드가 일치하지 않는 경우 발생
+| `400 Bad Request` | 1010 | 입점 DB에 등록된 이메일이 아닌 경우 발생
+| `400 Bad Request` | 1011 | 유효한 권한이 아닌 경우 발생
+| `404 Not Found` | 2000 | 숙소 정보를 찾을 수 없는 경우 발생
+| `400 Bad Request` | 2001 | 예약이 불가능한 객실인 경우 발생
+| `400 Bad Request` | 2002 | 알맞지 않은 카테고리일 경우 발생
+| `404 Not Found` | 3000 | 객실 정보를 찾을 수 없는 경우 발생
+| `400 Bad Request` | 3001 | 객실 이름이 중복된 경우 발생
+| `400 Bad Request` | 3002 | 올바르지 않은 형식의 시간으로 요청한 경우 발생
+| `400 Bad Request` | 3003 | 올바르지 않은 형식의 객실 상태인 경우 발생
+| `404 Not Found` | 3004 | 객실 이미지 정보를 찾을 수 없는 경우 발생
 | `400 Bad Request` | 4000 | 결제를 실패한 경우 발생
 | `400 Bad Request` | 4001 | 결제 시 선택한 쿠폰이 유효하지 않는 경우 발생
 | `400 Bad Request` | 4002 | 예약 선점 기한이 만료되었거나, 잘못된 예약 요청인 경우 발생
 | `400 Bad Request` | 4003 | 예약 숙소 정보를 찾을 수 없는 경우 발생
 | `400 Bad Request` | 4004 | 방문자 성함이 유효하지 않는 경우 발생
 | `400 Bad Request` | 4005 | 방문자 전화번호가 유효하지 않는 경우 발생
-| `404 NotFound` | 5000 | 쿠폰 정보를 찾을 수 없는 경우 발생
+| `404 Not Found` | 5000 | 쿠폰 정보를 찾을 수 없는 경우 발생
 | `400 Bad Request` | 5001 | 쿠폰 정보가 올바르지 않는 경우 발생
+| `500 Internal Server Error` | 6000 | 토스 API 요청에 실패한 경우 발생
+| `400 Bad Request` | 6001 | 결제 승인에 실패한 경우 발생
+| `400 Bad Request` | 6002 | 포인트 환불 요청 정보가 잘못된 경우 발생
+| `404 Not Found` | 6003 | 포인트 정보를 찾을 수 없는 경우 발생
 | `500 Internal Server Error` | 8000 | 오픈 API 이용 중 오류가 생긴 경우 발생
-| `404 NotFound` | 8001 | 오픈 API에서 가져온 숙소 데이터에서 필요한 정보를 찾을 수 없는 경우 발생
+| `404 Not Found` | 8001 | 오픈 API에서 가져온 숙소 데이터에서 필요한 정보를 찾을 수 없는 경우 발생
 | `500 Internal Server Error` | 9000 | DB 에러
 | `400 Bad Request` | 9001 | Request Body가 유효하지 않는 경우 발생
 | `500 Internal Server Error` | 9002 | 서버 에러
 | `400 Bad Request` | 9003 | 날짜 데이터가 유효하지 않는 경우 발생
+| `401 Unauthorized` | 9004 | 숙소의 업주가 아닌 경우 발생
 |===
