--- a/src/docs/asciidoc/room/room-api.adoc
+++ b/src/docs/asciidoc/room/room-api.adoc
@@ -25,6 +25,37 @@ include::{snippets}/room-controller-docs-test/register-room/request-fields.adoc[
 include::{snippets}/room-controller-docs-test/register-room/http-response.adoc[]
 include::{snippets}/room-controller-docs-test/register-room/response-fields.adoc[]
 
+[[Get-Rooms]]
+== 객실 목록 조회
+
+객실 목록 조회 API 입니다.
+
+=== HttpRequest
+
+include::{snippets}/room-controller-docs-test/get-rooms/http-request.adoc[]
+include::{snippets}/room-controller-docs-test/get-rooms/path-parameters.adoc[]
+include::{snippets}/room-controller-docs-test/get-rooms/query-parameters.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/room-controller-docs-test/get-rooms/http-response.adoc[]
+include::{snippets}/room-controller-docs-test/get-rooms/response-fields.adoc[]
+
+[[Get-Room]]
+== 객실 상세 조회
+
+객실 상세 조회 API 입니다.
+
+=== HttpRequest
+
+include::{snippets}/room-controller-docs-test/get-room/http-request.adoc[]
+include::{snippets}/room-controller-docs-test/get-room/path-parameters.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/room-controller-docs-test/get-room/http-response.adoc[]
+include::{snippets}/room-controller-docs-test/get-room/response-fields.adoc[]
+
 [[Modify-Room]]
 == 객실 수정
 
