--- a/src/docs/asciidoc/reservation/reservation-api.adoc
+++ b/src/docs/asciidoc/reservation/reservation-api.adoc
@@ -9,6 +9,20 @@ endif::[]
 :toc: left
 :toclevels: 2
 
+[[Create-Reservation]]
+== 예약 생성
+
+예약 생성 API 입니다.
+
+=== HttpRequest
+
+include::{snippets}/reservation-controller-docs-test/create-reservation/http-request.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/reservation-controller-docs-test/create-reservation/http-response.adoc[]
+include::{snippets}/reservation-controller-docs-test/create-reservation/response-fields.adoc[]
+
 [[Get-Reserved]]
 == 예약 내역 조회
 
@@ -38,3 +52,4 @@ include::{snippets}/reservation-controller-docs-test/get-canceled/query-paramete
 
 include::{snippets}/reservation-controller-docs-test/get-canceled/http-response.adoc[]
 include::{snippets}/reservation-controller-docs-test/get-canceled/response-fields.adoc[]
+
