--- a/src/docs/asciidoc/coupon/coupon-api.adoc
+++ b/src/docs/asciidoc/coupon/coupon-api.adoc
@@ -10,7 +10,7 @@ endif::[]
 :toclevels: 2
 
 [[Get-Rooms]]
-== 숙소의 객실 목록 조회
+== 쿠폰 만들기(View)
 
 쿠폰을 등록할 숙소와 객실 목록을 응답(View)
 
@@ -55,4 +55,30 @@ include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-respons
 include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/response-fields.adoc[]
 
 
+== 쿠폰 관리(View)
 
+
+=== HttpRequest
+
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/http-request.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/response-fields.adoc[]
+
+[[Addon-Coupon]]
+
+== 쿠폰 추가 구매
+
+쿠폰 추가 구매
+
+=== HttpRequest
+
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/request-fields.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/response-fields.adoc[]
