--- a/src/docs/asciidoc/coupon/coupon-api.adoc
+++ b/src/docs/asciidoc/coupon/coupon-api.adoc
@@ -9,19 +9,20 @@ endif::[]
 :toc: left
 :toclevels: 2
 
-[[Get-Rooms]]
+[[Create-Coupon-Response]]
+
 == 쿠폰 만들기(View)
 
-쿠폰을 등록할 숙소와 객실 목록을 응답(View)
+쿠폰 만들기 View Response
 
 === HttpRequest
 
-include::{snippets}/coupon-backoffice-controller-docs-test/rooms-response-by-accommodation/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-response-test/http-request.adoc[]
 
 === HttpResponse
 
-include::{snippets}/coupon-backoffice-controller-docs-test/rooms-response-by-accommodation/http-response.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/rooms-response-by-accommodation/response-fields.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-response-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-response-test/response-fields.adoc[]
 
 [[Create-Coupons]]
 
@@ -31,54 +32,76 @@ include::{snippets}/coupon-backoffice-controller-docs-test/rooms-response-by-acc
 
 === HttpRequest
 
-include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon/http-request.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon/request-fields.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-request-test/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-request-test/request-fields.adoc[]
 
 === HttpResponse
 
-include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon/http-response.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon/response-fields.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-request-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/create-coupon-request-test/response-fields.adoc[]
 
 [[Manage-Coupon]]
 
-== 쿠폰 관리 화면(View Data)
-
-쿠폰 관리에 필요한 화면 데이터를 응답한다.
-
-=== HttpRequest
-
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/http-request.adoc[]
-
-=== HttpResponse
-
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/http-response.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/response-fields.adoc[]
-
-
 == 쿠폰 관리(View)
 
+쿠폰 관리 View Response
 
 === HttpRequest
 
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/manage-coupon-response-test/http-request.adoc[]
 
 === HttpResponse
 
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/http-response.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-manage-response-test/response-fields.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/manage-coupon-response-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/manage-coupon-response-test/response-fields.adoc[]
+
 
 [[Addon-Coupon]]
 
 == 쿠폰 추가 구매
 
-쿠폰 추가 구매
+쿠폰 추가 구매 API
 
 === HttpRequest
 
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/http-request.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/request-fields.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/addon-coupon-request-test/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/addon-coupon-request-test/request-fields.adoc[]
 
 === HttpResponse
 
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/http-response.adoc[]
-include::{snippets}/coupon-backoffice-controller-docs-test/coupon-addon-request-test/response-fields.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/addon-coupon-request-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/addon-coupon-request-test/response-fields.adoc[]
+
+
+[[Modify-Coupon]]
+
+== 쿠폰 수정
+
+쿠폰 수정 API
+
+=== HttpRequest
+
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/request-fields.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/response-fields.adoc[]
+
+
+[[Delete-Coupon]]
+
+== 쿠폰 삭제
+
+쿠폰 삭제 API
+
+=== HttpRequest
+
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/http-request.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/request-fields.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/response-fields.adoc[]
