--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -46,31 +46,40 @@
 | `400 Bad Request` | 1004 | 로그인 시 비밀번호가 틀린 경우 발생
 | `404 Not Found` | 1005 | 회원 정보를 찾을 수 없는 경우 발생
 | `404 NotFound` | 1006 | 인증 정보를 찾을 수 없는 경우 발생
-| `500 Internal Server Error` | 1007 | 이메일 인증코드 생성 중 오류가 발생한 경우 발생
-| `400 Bad Request` | 1008 | 존재하지 않는 이메일인 경우 발생
-| `400 Bad Request` | 1009 | 이메일 인증코드가 일치하지 않는 경우 발생
-| `400 Bad Request` | 1010 | 입점 DB에 등록된 이메일이 아닌 경우 발생
-| `400 Bad Request` | 1011 | 유효한 권한이 아닌 경우 발생
+| `500 Internal Server Error` | 1007 | 이메일 인증코드 발송 중 오류가 발생한 경우 발생
+| `500 Internal Server Error` | 1008 | 이메일 인증코드 생성 중 오류가 발생한 경우 발생
+| `400 Bad Request` | 1009 | 존재하지 않는 이메일인 경우 발생
+| `400 Bad Request` | 1010 | 이메일 인증코드가 일치하지 않는 경우 발생
+| `400 Bad Request` | 1011 | 입점 DB에 등록된 이메일이 아닌 경우 발생
+| `400 Bad Request` | 1012 | 유효한 권한이 아닌 경우 발생
+| `400 Bad Request` | 1013 | 이메일 인증 전 회원가입을 시도한 경우 발생
 | `404 Not Found` | 2000 | 숙소 정보를 찾을 수 없는 경우 발생
 | `400 Bad Request` | 2001 | 예약이 불가능한 객실인 경우 발생
 | `400 Bad Request` | 2002 | 알맞지 않은 카테고리일 경우 발생
+| `400 Bad Request` | 2003 | 숙소 등록 시 이미지가 누락된 경우 발생
+| `400 Bad Request` | 2004 | 이미지 저장이 실패한 경우 발생
 | `404 Not Found` | 3000 | 객실 정보를 찾을 수 없는 경우 발생
 | `400 Bad Request` | 3001 | 객실 이름이 중복된 경우 발생
 | `400 Bad Request` | 3002 | 올바르지 않은 형식의 시간으로 요청한 경우 발생
 | `400 Bad Request` | 3003 | 올바르지 않은 형식의 객실 상태인 경우 발생
-| `404 Not Found` | 3004 | 객실 이미지 정보를 찾을 수 없는 경우 발생
+| `404 Not Found` | 3004 | 객실 재고 정보를 찾을 수 없는 경우 발생
+| `404 Not Found` | 3005 | 객실 이미지 정보를 찾을 수 없는 경우 발생
+| `400 Bad Request` | 3006 | 숙소 등록 시 객실이 누락된 경우 발생
+| `400 Bad Request` | 3007 | 객실 등록 시 이미지가 누락된 경우 발생
 | `400 Bad Request` | 4000 | 결제를 실패한 경우 발생
 | `400 Bad Request` | 4001 | 결제 시 선택한 쿠폰이 유효하지 않는 경우 발생
 | `400 Bad Request` | 4002 | 예약 선점 기한이 만료되었거나, 잘못된 예약 요청인 경우 발생
 | `400 Bad Request` | 4003 | 예약 숙소 정보를 찾을 수 없는 경우 발생
 | `400 Bad Request` | 4004 | 방문자 성함이 유효하지 않는 경우 발생
 | `400 Bad Request` | 4005 | 방문자 전화번호가 유효하지 않는 경우 발생
+| `400 Bad Request` | 4006 | 예약 정보를 찾을 수 없는 경우 발생
 | `404 Not Found` | 5000 | 쿠폰 정보를 찾을 수 없는 경우 발생
-| `400 Bad Request` | 5001 | 쿠폰 정보가 올바르지 않는 경우 발생
+| `400 Bad Request` | 5001 | 쿠폰의 재고가 부족한 경우 발생
 | `500 Internal Server Error` | 6000 | 토스 API 요청에 실패한 경우 발생
 | `400 Bad Request` | 6001 | 결제 승인에 실패한 경우 발생
 | `400 Bad Request` | 6002 | 포인트 환불 요청 정보가 잘못된 경우 발생
 | `404 Not Found` | 6003 | 포인트 정보를 찾을 수 없는 경우 발생
+| `404 Not Found` | 6004 | 포인트 잔액이 부족한 경우 발생
 | `500 Internal Server Error` | 8000 | 오픈 API 이용 중 오류가 생긴 경우 발생
 | `404 Not Found` | 8001 | 오픈 API에서 가져온 숙소 데이터에서 필요한 정보를 찾을 수 없는 경우 발생
 | `500 Internal Server Error` | 9000 | DB 에러
