docs: 숙소, 이미지 API URI 수정에 따른 adoc 파일 생성 및 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -19,6 +19,8 @@
 
 === link:coupon/coupon-api.html[쿠폰 API, window=blank]
 
+=== link:image/image-api.html[이미지 API, window=blank]
+
 == API Common Response
 
 [[overview-status-code]]
