--- a/src/docs/asciidoc/coupon/coupon-api.adoc
+++ b/src/docs/asciidoc/coupon/coupon-api.adoc
@@ -105,3 +105,19 @@ include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request
 
 include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/http-response.adoc[]
 include::{snippets}/coupon-backoffice-controller-docs-test/modify-coupon-request-test/response-fields.adoc[]
+
+
+[[Statistics-Coupon]]
+
+== 쿠폰 현황 통계
+
+쿠폰 현환 통계 API
+
+=== HttpRequest
+
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-statistics-test/http-request.adoc[]
+
+=== HttpResponse
+
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-statistics-test/http-response.adoc[]
+include::{snippets}/coupon-backoffice-controller-docs-test/coupon-statistics-test/response-fields.adoc[]
